release 1.2.0: Fixed a few minor bugs, Introduced Dark Mode

--- a/palette-light.css
+++ b/palette-light.css
@@ -7,5 +7,6 @@
     --font: #000;
     --accent1: #000;
     --accent2: #000;
+    --boxshadow: rgba(0, 0, 0, 0.3);
     --base1: #FFFFFF;
 }
